--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -135,6 +135,9 @@ body
 .mb-20
 	margin-bottom: 20%
 
+.p-10
+	padding: 10px
+
 .bold
 	font-weight: bold
 
@@ -144,3 +147,6 @@ body
 a
 	cursor: pointer
 	font-size: 1.5rem
+
+h2, h3, h4, h5, h6
+	margin: 0
