--- a/src/components/Projects/project.sass
+++ b/src/components/Projects/project.sass
@@ -21,10 +21,14 @@
 	opacity: 0
 
 .ProjectTitle__image_container
+	display: flex
+	flex-direction: column
+	justify-self: center
+	align-content: center
 	cursor: pointer
 	position: relative
 	overflow: hidden
-	max-height: 100vh
+	max-height: 80vh
 	transition: all 0.3s
 	img
 		position: relative
