--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -78,9 +78,11 @@ body
 
 .utils_center_abs
 	position: absolute
+	top: 30px
 	left: 50%
 	transform-origin: center center
 	transform: translateX(-50%)
+	z-index: 2000
 
 .heading1
 	font-size: 10rem
@@ -145,6 +147,8 @@ body
 	path
 		fill: #111
 a
+	color: #111
+	text-decoration: none
 	cursor: pointer
 	font-size: 1.5rem
 
