static test for live

--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -154,3 +154,12 @@ a
 
 h2, h3, h4, h5, h6
 	margin: 0
+
+.box
+	position: absolute
+	top: 0
+	left: 0
+	width: 30px
+	height: 30px
+	background-color: red
+	z-index: 10000
