--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -1,5 +1,4 @@
-@imoprt "/NeutralFace/NeutralFace.sass"
-@imoprt "/Inter/inter.sass"
+@imoprt "/static/fonts/fonts.css"
 
 @mixin size($width, $height: $width)
 	width: $width
