markdown projets, optimzied images

--- a/src/components/Landing/landing.sass
+++ b/src/components/Landing/landing.sass
@@ -1,3 +1,5 @@
+@import "/static/css/colors.css"
+
 .Landing__heading
 	margin: 0
 	font-size: 10rem
@@ -16,7 +18,7 @@
 		bottom: 18%
 		width: 98vw
 		height: 1px
-		background: #ebebeb
+		background: var(--b-color)
 		z-index: -1
 
 .Landing__start_button
@@ -41,4 +43,4 @@
 		padding: 15px
 		border-radius: 100px
 		background: #111
-		color: #fefefe
+		color: var(--p-color)
