--- a/src/templates_f/project_template.sass
+++ b/src/templates_f/project_template.sass
@@ -1,7 +1,10 @@
 @import "/static/css/colors.css"
 
+.Project_T
+	position: relative
+
 .Project_T_img_container
 	position: relative
-	width: 100vw
+	width: 100%
 	height: 100vh
 	overflow: hidden
