--- a/src/templates_f/project_template.sass
+++ b/src/templates_f/project_template.sass
@@ -6,5 +6,24 @@
 .Project_T_img_container
 	position: relative
 	width: 100%
+
+.Project_T_heading_container
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
 	height: 100vh
+	z-index: 10
+	h1
+		color: var(--back-color)
+
+.Project_T_content
+	position: relative
+	z-index: 20
+	background: var(--back-color)
+	margin-bottom: 200vh
+	margin-top: 10vh
+
+.animateTextContainer
+	display: flex
 	overflow: hidden
