project page meta animation

--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -74,6 +74,12 @@ body
 .utils_m_auto
 	margin: 0 auto
 
+.util_op_8
+	opacity: 0.8
+
+.util_op_6
+	opacity: 0.6
+
 .util_test
 	border: 1px solid green
 
