--- a/src/templates_f/project_template.sass
+++ b/src/templates_f/project_template.sass
@@ -14,6 +14,8 @@
 	width: 100%
 	height: 100vh
 	z-index: 10
+	display: grid
+	grid-template-rows: auto auto
 	h1
 		color: var(--back-color)
 
@@ -23,6 +25,27 @@
 	background: var(--back-color)
 	margin-bottom: 200vh
 	margin-top: 10vh
+
+.Project_T_meta
+	display: grid
+	margin-top: 5%
+	width: 100%
+	grid-template-columns: auto 1fr auto
+	color: var(--b-color)
+	div
+		&:first-child
+			grid-column: 1/2
+		&:last-child
+			grid-column: 3/4
+
+.P_T_meta_container
+	display: flex
+	flex-direction: row
+	justify-content: flex-start
+	align-items: flex-start
+	column-gap: 60px
+	&:last-child
+		justify-content: flex-end
 
 .animateTextContainer
 	display: flex
