about us page added

--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -59,6 +59,9 @@ body
 .util_h75
 	height: 75vh
 
+.util_h90
+	height: 90vh
+
 .util_h100
 	height: 100vh
 
@@ -170,3 +173,9 @@ h2, h3, h4, h5, h6
 	height: 30px
 	background-color: red
 	z-index: 10000
+
+.big_heading
+	font-size: 4rem
+
+.space
+	margin-bottom: 10%
