--- a/src/templates_f/project_template.sass
+++ b/src/templates_f/project_template.sass
@@ -27,6 +27,7 @@
 	margin-top: 10vh
 
 .Project_T_meta
+	position: relative
 	display: grid
 	margin-top: 5%
 	width: 100%
@@ -50,3 +51,10 @@
 .animateTextContainer
 	display: flex
 	overflow: hidden
+
+.center_absolute
+	position: absolute
+	left: 50%
+	top: 100%
+	transform-origin: center center
+	transform: translateX(-50%)
