--- a/src/components/Landing/landing.sass
+++ b/src/components/Landing/landing.sass
@@ -5,7 +5,12 @@
 	font-size: 10rem
 	text-align: center
 
+.Landing__sub_heading
+	font-size: 4rem
+	font-style: italic
+
 .Landing__tag
+	margin-top: 40px
 	text-align: center
 	font-weight: normal
 	font-size: 2rem
