detail project images added

--- a/src/templates_f/project_template.sass
+++ b/src/templates_f/project_template.sass
@@ -58,3 +58,14 @@
 	top: 100%
 	transform-origin: center center
 	transform: translateX(-50%)
+
+.Project_T__image_container
+	position: relative
+	display: grid
+	grid-template-columns: 50% 50%
+
+.Project_T_content_text
+	position: relative
+	grid-column: 2/3
+	padding: 50px
+	height: 100vh
