project content_text designed

--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -138,12 +138,19 @@ body
 .mt-10
 	margin-top: 10%
 
+.mt-5
+	margin-top: 5%
+
+.mb-5
+	margin-bottom: 5%
+
 .mtb-10
 	margin: 10% 0
 
 .mtb-30
 	margin: 30% 0
-
+.mb-10
+	margin-bottom: 10%
 .mb-20
 	margin-bottom: 20%
 
