--- a/src/templates_f/project_template.sass
+++ b/src/templates_f/project_template.sass
@@ -62,10 +62,40 @@
 .Project_T__image_container
 	position: relative
 	display: grid
-	grid-template-columns: 50% 50%
+	grid-template-columns: 60% 40%
+	hr
+		border: none
+		border-top: 1px solid #bebebe
 
 .Project_T_content_text
 	position: relative
 	grid-column: 2/3
 	padding: 50px
 	height: 100vh
+	font-family: 'Inter', sans-serif
+	h1
+		margin: 0
+	.PT_client
+		font-size: 5rem
+
+.Project_T_content_text_container
+	display: grid
+	margin: 20px 0
+	grid-template-columns: repeat(3, calc( 100%/3))
+	grid-template-rows: 1fr 1fr
+	grid-row-gap: 20px
+	.PT_full_column
+		grid-column: 1/4
+	span
+		font-size: 0.8em
+		color: #999
+	p
+		font-size: 1.2rem
+		margin: 10px 0px 0px 0px
+.PT_description
+	font-size: 1.2rem
+	line-height: 1.8rem
+
+.PT_address
+	font-size: 1.2rem
+	max-width: 70%
