--- a/src/components/Landing/landing.sass
+++ b/src/components/Landing/landing.sass
@@ -4,10 +4,14 @@
 	margin: 0
 	font-size: 10rem
 	text-align: center
+	@media screen and (max-width: 400px)
+		font-size: 3rem
 
 .Landing__sub_heading
 	font-size: 4rem
 	font-style: italic
+	@media screen and (max-width: 400px)
+		font-size: 1.3rem
 
 .Landing__tag
 	margin-top: 40px
@@ -15,6 +19,8 @@
 	font-weight: normal
 	font-size: 2rem
 	position: relative
+	@media screen and (max-width: 400px)
+		font-size: 1.4rem
 	&::after
 		content: ""
 		position: absolute
