--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -33,6 +33,8 @@ body
 	text-align: center
 	margin-bottom: 10%
 	font-size: 5rem
+	@media screen and (max-width: 400px)
+		font-size: 2rem
 
 .util__flex_center_child
 	align-self: center
@@ -101,6 +103,8 @@ body
 	text-transform: uppercase
 	font-size: 8rem
 	margin: 0
+	@media screen and (max-width: 400px)
+		font-size: 3.2rem
 
 .heading2
 	font-size: 3rem
@@ -108,6 +112,8 @@ body
 .heading3, .para
 	font-family: "Inter"
 	font-size: 2rem
+	@media screen and (max-width: 400px)
+		font-size: 1.4rem
 
 .para
 	color: var(--s-color)
@@ -116,7 +122,8 @@ body
 	@include size(20rem)
 	opacity: 0.88
 	background: conic-gradient(from 180deg at 50% 50%, #000000, #060606, #161616, #2f2f2f, #4d4d4d, #6e6e6e, #919191, #b2b2b2, #d0d0d0, #e9e9e9, #f9f9f9, #ffffff)
-
+	@media screen and (max-width: 400px)
+		@include size(10rem)
 .radial2
 	background: conic-gradient(from 270deg at 50% 50%, #3a0a0a, #3f0c0c, #4b1212, #5e1e1e, #753131, #8f4c4c, #aa6d6d, #c49393, #dbbaba, #eedddd, #faf6f6, #ffffff)
 
@@ -154,6 +161,9 @@ body
 .mb-20
 	margin-bottom: 20%
 
+.mr-s
+	margin-right: 20px
+
 .p-10
 	padding: 10px
 
@@ -171,7 +181,9 @@ a
 
 h2, h3, h4, h5, h6
 	margin: 0
-
+h2
+	@media screen and(max-width: 400px)
+		font-size: 1rem
 .box
 	position: absolute
 	top: 0
