--- a/src/components/Footer/footer.sass
+++ b/src/components/Footer/footer.sass
@@ -1,6 +1,8 @@
 .Footer
 	display: grid
 	grid-template-columns: 50% 50%
+	@media screen and(max-width: 400px)
+		grid-template-columns: 100%
 
 .Footer__content
 	height: 100%
@@ -9,7 +11,13 @@
 	justify-content: flex-end
 	&:first-child
 		padding-left: 10%
+		@media screen and (max-width: 400px )
+			padding-left: 5%
+	&:last-child
+		background: #111
 
 .Footer__section
 	h1
 		font-size: 5rem
+		@media screen and(max-width: 400px)
+			font-size: 2.5rem
