--- a/src/components/Projects/project.sass
+++ b/src/components/Projects/project.sass
@@ -12,6 +12,11 @@
 	border-radius: 10px
 	background: var(--back-color)
 	border: 1px solid var(--border-color)
+	@media screen and(max-width: 400px)
+		padding: 20px
+		display: flex
+		flex-direction: column
+		display: none
 
 .ProjectBoard
 	margin: 10% 30px
@@ -52,6 +57,8 @@
 	.project_y
 		margin-bottom: 0
 		font-size: 3rem
+		@media screen and(max-width: 400px)
+			font-size: 1.2rem
 
 .seperate
 	display: flex
