--- a/src/components/Footer/footer.sass
+++ b/src/components/Footer/footer.sass
@@ -1,7 +1,9 @@
+@import "/static/css/colors.css"
+
 .Footer
 	display: grid
 	grid-template-columns: 50% 50%
-	@media screen and(max-width: 400px)
+	@media screen and(max-width: 500px)
 		grid-template-columns: 100%
 
 .Footer__content
@@ -11,7 +13,7 @@
 	justify-content: flex-end
 	&:first-child
 		padding-left: 10%
-		@media screen and (max-width: 400px )
+		@media screen and (max-width: 500px )
 			padding-left: 5%
 	&:last-child
 		background: #111
@@ -19,5 +21,5 @@
 .Footer__section
 	h1
 		font-size: 5rem
-		@media screen and(max-width: 400px)
+		@media screen and(max-width: 500px)
 			font-size: 2.5rem
