--- a/src/components/Services/services.sass
+++ b/src/components/Services/services.sass
@@ -1,19 +1,21 @@
+@import "/static/css/colors.css"
+
 .services_grid
 	display: grid
 	width: 100%
 	grid-template-columns: 1fr 400px 550px 1fr
-	@media screen and(max-width: 400px)
+	@media screen and(max-width: 500px)
 		grid-template-columns: 1fr
 	div:nth-child(1)
 		grid-column: 2 / span 1
 		margin-right: 10px
-		@media screen and(max-width: 400px)
+		@media screen and(max-width: 500px)
 			grid-column: auto
 			margin: 10px 0 0 0
 	div:nth-child(2)
 		grid-column: 3 / span 1
 		margin-left: 10px
-		@media screen and(max-width: 400px)
+		@media screen and(max-width: 500px)
 			text-align: center
 			grid-column: auto
 			margin: 10px 0 0 0
