--- a/src/components/NavBar/navbar.sass
+++ b/src/components/NavBar/navbar.sass
@@ -6,6 +6,8 @@
 	justify-content: space-between
 	align-items: center
 	padding: 2%
+	@media screen and(max-width: 500px)
+		padding: 7%
 
 .navigation__group
 	display: flex
