--- a/src/components/About/about.sass
+++ b/src/components/About/about.sass
@@ -7,7 +7,7 @@
 	overflow: hidden
 
 .About__section
-	height: 90vh
+	height: 70vh
 	h1
 		margin-top: 50px
 		font-size: 2.5rem
@@ -23,6 +23,8 @@
 	position: relative
 	display: flex
 	flex-direction: column
+	@media screen and(max-width: 500px)
+		width: 80%
 
 .Member__background_name
 	position: absolute
@@ -36,22 +38,19 @@
 		font-size: 10rem
 
 .Member__image_container
-	width: 90%
-	height: 80vh
-	overflow: hidden
+	width: 60vh
 	border-radius: 1000px
 	-webkit-border-radius: 1000px
 	-moz-border-radius: 1000px
 	transform: translateZ(0)
-	img
-		height: 100%
+	@media screen and(max-width: 500px)
+		width: 90%
 
 .Member__image_container_img_big
 	transform: translateY(-8%) scale(1.1)
 
 .Member__small
 	width: 80%
-	height: 40vh
 
 .Member__founders
 	row-gap: 100px
