--- a/src/components/Footer/footer.sass
+++ b/src/components/Footer/footer.sass
@@ -3,7 +3,7 @@
 .Footer
 	display: grid
 	grid-template-columns: 50% 50%
-	@media screen and(max-width: 500px)
+	@media screen and(max-width: 1000px)
 		grid-template-columns: 100%
 
 .Footer__content
@@ -16,10 +16,12 @@
 		@media screen and (max-width: 500px )
 			padding-left: 5%
 	&:last-child
-		background: #111
+		background: #f0f0f0
 
 .Footer__section
 	h1
 		font-size: 5rem
 		@media screen and(max-width: 500px)
 			font-size: 2.5rem
+		@media only screen and (max-width: 1300px) and (min-width: 501px)
+			font-size: 4rem
