--- a/src/components/Landing/landing.sass
+++ b/src/components/Landing/landing.sass
@@ -6,12 +6,18 @@
 	text-align: center
 	@media screen and (max-width: 500px)
 		font-size: 3rem
+	@media only screen and (max-width: 900px) and (min-width: 501px)
+		font-size: 5rem
+	@media only screen and (max-width: 1500px) and (min-width: 901px)
+		font-size: 8rem
 
 .Landing__sub_heading
 	font-size: 4rem
 	font-style: italic
 	@media screen and (max-width: 500px)
 		font-size: 1.3rem
+	@media only screen and (max-width: 900px) and (min-width: 501px)
+		font-size: 2.5rem
 
 .Landing__tag
 	margin-top: 40px
