--- a/src/components/global_css/main.sass
+++ b/src/components/global_css/main.sass
@@ -105,6 +105,10 @@ body
 	margin: 0
 	@media screen and (max-width: 500px)
 		font-size: 3.2rem
+	@media only screen and (max-width: 900px) and (min-width: 501px)
+		font-size: 5rem
+	@media only screen and (max-width: 1500px) and (min-width: 901px)
+		font-size: 8rem
 
 .heading2
 	font-size: 3rem
